--- a/tosca-examples/amber_onedata.yml
+++ b/tosca-examples/amber_onedata.yml
@@ -59,7 +59,7 @@ topology_template:
  command:
  type: string
  description: Command to execute
- default: 'cd && /bin/bash amber_run.sh'
+ default: 'cd $MESOS_SANDBOX && /bin/bash amber_run.sh'
  required: no
  
  cpus:
