--- a/tosca-examples/lifewatch_onedata.yml
+++ b/tosca-examples/lifewatch_onedata.yml
@@ -71,7 +71,7 @@ topology_template:
  command:
  type: string
  description: Command to execute
- default: 'cd && /bin/bash lifewatch_run.sh'
+ default: 'cd $MESOS_SANDBOX && /bin/bash lifewatch_run.sh'
  required: no
  
  cpus:
