--- a/tosca-examples/amber_swift.yml
+++ b/tosca-examples/amber_swift.yml
@@ -82,10 +82,10 @@ topology_template:
         retries: 3
         environment_variables:
           OUTPUT_FILENAMES: { get_input: output_filenames }
-          ONEDATA_SERVICE_TOKEN: 'xxxxx'
-          ONEDATA_SPACE: 'indigoservice'
-          ONEDATA_PATH: 'Amber'
-          ONEDATA_PROVIDERS: 'oneprovider2.cloud.ba.infn.it'
+          ONEDATA_SERVICE_TOKEN: "TOKEN_TO_BE_SET_BY_THE_ORCHESTRATOR"
+          ONEDATA_SPACE: "DATA_SPACE_TO_BE_SET_BY_THE_ORCHESTRATOR"
+          ONEDATA_PATH: "PATH_TO_BE_SET_BY_THE_ORCHESTRATOR"
+          ONEDATA_PROVIDERS: "ONEDATA_PROVIDERS_TO_BE_SET_BY_THE_ORCHESTRATOR"
       artifacts:
         image:
           file: indigodatacloudapps/ambertools-oneclient:latest
@@ -109,10 +109,10 @@ topology_template:
           OUTPUT_TENANT: { get_input: output_tenant }
           OUTPUT_REGION: { get_input: output_region }
           OUTPUT_FILENAMES: { get_input: output_filenames }
-          ONEDATA_SERVICE_TOKEN: 'xxxx'
-          ONEDATA_SPACE: 'indigoservice'
-          ONEDATA_PATH: 'Amber'
-          ONEDATA_PROVIDERS: 'oneprovider2.cloud.ba.infn.it'
+          ONEDATA_SERVICE_TOKEN: "TOKEN_TO_BE_SET_BY_THE_ORCHESTRATOR"
+          ONEDATA_SPACE: "DATA_SPACE_TO_BE_SET_BY_THE_ORCHESTRATOR"
+          ONEDATA_PATH: "PATH_TO_BE_SET_BY_THE_ORCHESTRATOR"
+          ONEDATA_PROVIDERS: "ONEDATA_PROVIDERS_TO_BE_SET_BY_THE_ORCHESTRATOR"
       artifacts:
         image:
           file: indigodatacloud/chronos-job-upload:latest
